# Geant4_2024

./: CMakeLists.txt  README  README.ipynb  analytics.ipynb  dodecahedr_e.csv  icosahedron_e.csv  main.cc  results.csv  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  Physics.hh  PrimaryGeneratorAction.hh  SensitiveDetector.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  Physics.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc
